// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component 1`] = `
<div
  id="wrap"
>
  <Nav />
  <div
    className="container"
  >
    <Header />
    <div
      key="1"
    >
      <Booking
        id={1}
      />
    </div>
    <div
      key="2"
    >
      <Booking
        id={2}
      />
    </div>
    <Form />
  </div>
</div>
`;

exports[`Booking component 1`] = `
<div
  className="row"
>
  <div
    className="col-md-1"
  >
    Billy
  </div>
  <div
    className="col-md-2"
  >
    Brown
  </div>
  <div
    className="col-md-1"
  >
    90
  </div>
  <div
    className="col-md-1"
  >
    true
  </div>
  <div
    className="col-md-2"
  >
    Jam
  </div>
  <div
    className="col-md-2"
  >
    2018-01-01
  </div>
  <div
    className="col-md-2"
  >
    2019-01-01
  </div>
  <div
    className="col-md-1"
  >
    <button
      className="edit"
      onClick={[Function]}
    >
      <i
        className="glyphicon glyphicon-edit"
      />
    </button>
    <button
      className="delete"
      onClick={[Function]}
    >
      <i
        className="glyphicon glyphicon-remove"
      />
    </button>
  </div>
</div>
`;

exports[`Cancel edit booking component 1`] = `
<Booking
  id="1"
>
  <div
    className="row"
  >
    <div
      className="col-md-1"
    >
      Billy
    </div>
    <div
      className="col-md-2"
    >
      Brown
    </div>
    <div
      className="col-md-1"
    >
      90
    </div>
    <div
      className="col-md-1"
    >
      true
    </div>
    <div
      className="col-md-2"
    >
      Jam
    </div>
    <div
      className="col-md-2"
    >
      2018-01-01
    </div>
    <div
      className="col-md-2"
    >
      2019-01-01
    </div>
    <div
      className="col-md-1"
    >
      <button
        className="edit"
        onClick={[Function]}
      >
        <i
          className="glyphicon glyphicon-edit"
        />
      </button>
      <button
        className="delete"
        onClick={[Function]}
      >
        <i
          className="glyphicon glyphicon-remove"
        />
      </button>
    </div>
  </div>
</Booking>
`;

exports[`Edit booking component 1`] = `
<Booking
  id="1"
>
  <div
    className="row"
  >
    <div
      className="col-md-1"
    >
      <input
        className="editfirstname form-control input-sm"
        defaultValue="Billy"
        placeholder="Firstname"
        type="text"
      />
    </div>
    <div
      className="col-md-2"
    >
      <input
        className="editlastname form-control input-sm"
        defaultValue="Brown"
        placeholder="Lastname"
        type="text"
      />
    </div>
    <div
      className="col-md-1"
    >
      <input
        className="edittotalprice form-control input-sm"
        defaultValue={90}
        placeholder="Price"
        type="text"
      />
    </div>
    <div
      className="col-md-1"
    >
      <input
        className="editdepositpaid form-control input-sm"
        defaultValue="true"
        placeholder="Deposit?"
        type="text"
      />
    </div>
    <div
      className="col-md-2"
    >
      <input
        className="editadditionalneeds form-control input-sm"
        defaultValue="Jam"
        placeholder="Additional"
        type="text"
      />
    </div>
    <div
      className="col-md-2"
    >
      <input
        className="editcheckin form-control input-sm"
        defaultValue="2018-01-01"
        placeholder="Checkin"
        type="text"
      />
    </div>
    <div
      className="col-md-2"
    >
      <input
        className="editcheckout form-control input-sm"
        defaultValue="2019-01-01"
        placeholder="Checkout"
        type="text"
      />
    </div>
    <div
      className="col-md-1"
    >
      <button
        className="edit btn btn-sm"
        onClick={[Function]}
      >
        Add
      </button>
      <button
        className="cancel btn btn-sm"
        onClick={[Function]}
      >
        <i
          className="glyphicon glyphicon-remove"
        />
      </button>
    </div>
  </div>
</Booking>
`;

exports[`Form component 1`] = `
<div
  className="row"
>
  <div
    className="col-md-1"
  >
    <input
      className="form-control input-sm"
      id="firstname"
      placeholder="Firstname"
      type="text"
    />
  </div>
  <div
    className="col-md-2"
  >
    <input
      className="form-control input-sm"
      id="lastname"
      placeholder="Lastname"
      type="text"
    />
  </div>
  <div
    className="col-md-1"
  >
    <input
      className="form-control input-sm"
      id="totalprice"
      placeholder="Price"
      type="text"
    />
  </div>
  <div
    className="col-md-1"
  >
    <input
      className="form-control input-sm"
      id="depositpaid"
      placeholder="Deposit?"
      type="text"
    />
  </div>
  <div
    className="col-md-2"
  >
    <input
      className="form-control input-sm"
      id="additionalneeds"
      placeholder="Additional"
      type="text"
    />
  </div>
  <div
    className="col-md-2"
  >
    <input
      className="form-control input-sm"
      id="checkin"
      placeholder="Checkin"
      type="text"
    />
  </div>
  <div
    className="col-md-2"
  >
    <input
      className="form-control input-sm"
      id="checkout"
      placeholder="Checkout"
      type="text"
    />
  </div>
  <div
    className="col-md-1"
  >
    <button
      className="btn btn-sm"
      onClick={[Function]}
    >
      Add
    </button>
  </div>
</div>
`;

exports[`Header component 1`] = `
<div
  className="row"
>
  <div
    className="col-md-1"
  >
    <p
      className="lead"
    >
      Firstname
    </p>
  </div>
  <div
    className="col-md-2"
  >
    <p
      className="lead"
    >
      Lastname
    </p>
  </div>
  <div
    className="col-md-1"
  >
    <p
      className="lead"
    >
      Price
    </p>
  </div>
  <div
    className="col-md-1"
  >
    <p
      className="lead"
    >
      Deposit
    </p>
  </div>
  <div
    className="col-md-2"
  >
    <p
      className="lead"
    >
      Additional
    </p>
  </div>
  <div
    className="col-md-2"
  >
    <p
      className="lead"
    >
      Checkin
    </p>
  </div>
  <div
    className="col-md-2"
  >
    <p
      className="lead"
    >
      Checkout
    </p>
  </div>
  <div
    className="col-md-1"
  />
</div>
`;

exports[`Nav component 1`] = `
<div
  className="navbar navbar-default navbar-fixed-top"
>
  <div
    className="container"
  >
    <div
      className="navbar-header"
    >
      <button
        className="navbar-toggle"
        data-target=".navbar-collapse"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
        <span
          className="icon-bar"
        />
      </button>
      <a
        className="navbar-brand"
        href="#"
      >
        Restful booker
      </a>
    </div>
  </div>
</div>
`;
